package com.andreas.musicteacher.feature.authentication.dto;

public class LoginResponseDto {
    private String message;
    private String token;
    private long expiresIn;

    public LoginResponseDto(String message) {
        this.message = message;
    }

    public String getToken() {
        return token;
    }

    public LoginResponseDto setToken(String token) {
        this.token = token;
        return this;
    }

    public long getExpiresIn() {
        return expiresIn;
    }

    public LoginResponseDto setExpiresIn(long expiresIn) {
        this.expiresIn = expiresIn;
        return this;
    }

    public String getMessage() {
        return message;
    }

    public void setMessage(String message) {
        this.message = message;
    }
}